fix: fixed spacing of about section

--- a/SkyrimCharacterRandomizer/style.css
+++ b/SkyrimCharacterRandomizer/style.css
@@ -128,6 +128,10 @@ a:hover {
     padding: 1rem;
 }
 
+.about-section {
+    margin-top: 3rem;
+}
+
 .about-section h2 {
     text-align: center;
 }
